<resources>
    <string name="app_name">Plate Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="options">Options</string>
    <string name="skip"><u>SKIP</u></string>
    <string name="already_have_an_account_log_in">Already have an account? <u>Log In</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="done">Done</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="calender">Calender</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="favourites">Favourites</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="video">Video</string>
    <string name="forgot_your_password_reset_it">Forgot your password? <u>Reset it</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="week_plan">Week Plan</string>
    <string name="upload_meals">Upload Meals</string>
    <string name="sign_up_and_you_will_be_able_to_add_your_favorite_meals">Sign up and you will be able to add your favorite meals.</string>
    <string name="sign_up_and_you_will_be_able_to_add_your_week_plan_meals">Sign up and you will be able to add your week plan meals.</string>
</resources>