<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:background="@drawable/text_back"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:background="@drawable/text_back"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/favouritesFragment"
        android:background="@drawable/text_back"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/favourite" />
    <item
        android:id="@+id/calenderFragment"
        android:background="@drawable/text_back"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/calender" />
</menu>