<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.plateplanner.startactivity.splash.view.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_signInOptionsFragment"
            app:destination="@id/signInOptionsFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signInOptionsFragment"
        android:name="com.example.plateplanner.startactivity.view.SignInOptionsFragment"
        android:label="@string/options"
        tools:layout="@layout/fragment_sign_in_options">
        <action
            android:id="@+id/action_signInOptionsFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
        <action
            android:id="@+id/action_signInOptionsFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.plateplanner.startactivity.signin.view.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_resetFragment"
            app:destination="@id/resetFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.plateplanner.startactivity.signup.view.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/signInOptionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/resetFragment"
        android:name="com.example.plateplanner.startactivity.ResetFragment"
        android:label="fragment_reset"
        tools:layout="@layout/fragment_reset" />

</navigation>