<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInOptionsFragment">


    <ImageButton
        android:id="@+id/googleBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_back"
        android:elevation="6dp"
        android:src="@drawable/icons8_google"
        android:textColor="@color/black"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintBottom_toTopOf="@+id/emailSignBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emailSignBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_back"
        android:elevation="6dp"
        android:text="@string/sign_up_with_email"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/signInTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/skipTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_back"
        android:text="@string/skip"
        android:textColor="#3F65D8"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signInTv"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_back"
        android:gravity="center"
        android:text="@string/already_have_an_account_log_in"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>